# 3D_Canvas

./: .gitignore  CMakeLists.txt
inc/: Vao.hpp  config.hpp  config.hpp.in  cv_commons.hpp  gl_commons.hpp
models/CornellBox/: CornellBox-Empty-CO.mtl  CornellBox-Empty-RG.mtl  CornellBox-Empty-Squashed.mtl  CornellBox-Empty-White.mtl  CornellBox-Glossy.mtl  CornellBox-Mirror.mtl  CornellBox-Original.mtl  CornellBox-Sphere.mtl  CornellBox-Water.mtl
src/: CMakeLists.txt  FragmentShader.cpp  FragmentShader.glsl  Vao.cpp  VertexShader.cpp  VertexShader.glsl  gl_commons.cpp  main.cpp
tests/: img2grey.cpp
